--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,5 +5,13 @@
   <div class="post-entry">
     <h2>{{ object.title }}</h2>
     <p>{{ object.content|safe }}</p>
+    <h3>Comments:</h3>
+    <ul>
+      {% for comment in post.comments.all %}
+        <li>{{ comment.text }} - {{ comment.author }} ({{ comment.created_date }})</li>
+      {% empty %}
+        <li>No comments yet.</li>
+      {% endfor %}
+    </ul>
   </div>
 {% endblock content %}
